--- a/OFFERS-313/ru/styles/scss/components/_header.scss
+++ b/OFFERS-313/ru/styles/scss/components/_header.scss
@@ -7,34 +7,59 @@
     padding: 0 1rem;
     margin: 0 auto;
   }
+  &__chat {
+    @include flex(row, center, center);
+    p {
+      margin-left: 10px;
+    }
+  }
   &__top {
     background: #7a9bcd;
     padding: 20px 0;
   }
+  &__bottom {
+    @media (max-width: 1000px) {
+      .header__wrapper {
+        @include flex(row, center, center);
+      }
+    }
+    &--link {
+      @include flex(row, center, center);
+      color: #000;
+      font-size: 20px;
+      font-weight: 300;
+      height: 60px;
+      padding: 0 10px;
+      text-decoration: none;
+      @include transition;
+      
+      &:hover {
+        background-color: #435B80;
+        color: #fff;
+      }
+  
+      img {
+        margin-right: 10px;
+      }
+    }
+  }
   &__logo {
     @include flex(row);
 
-    margin-right: 6rem;
+    margin: 0px 20px;
     @media (max-width: 950px) {
       margin-right: 1rem;
     }
     img {
-      margin-right: 1rem;
-    }
-    p {
-      @include flex(column);
-      font-size: 16px;
-      line-height: 1.1;
-      b {
-        color: #051071;
-      }
+      width: 100%;
+      max-width: 500px;
     }
   }
 
   &__menu {
-    @include flex(row, space-around, center);
+    @include flex(row, space-around);
     width: 100%;
-
+    height: 100%;
     @media (max-width: 1000px) {
       display: none;
     }
@@ -57,6 +82,9 @@
   }
 
   &__mob-menu {
+    img {
+      width: 30px;
+    }
     @media (min-width: 1000px) {
       display: none;
     }
