--- a/OFFERS-313/ru/styles/scss/main.scss
+++ b/OFFERS-313/ru/styles/scss/main.scss
@@ -4,6 +4,7 @@
 @import "components/header";
 
 .main {
+  background-color: #fff;
   display: grid;
   grid-template-columns: 4fr 1fr;
   grid-gap: 2rem;
