--- a/OFFERS-313/ru/styles/scss/_most.scss
+++ b/OFFERS-313/ru/styles/scss/_most.scss
@@ -1,10 +1,11 @@
-bhtml {
+html {
   overflow-x: hidden;
 }
 
 body {
   margin: 0;
   padding: 0;
+  background-color:  #F2F2F2;
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
   font-size: 16px;
