--- a/OFFERS-313/ru/styles/scss/components/_header.scss
+++ b/OFFERS-313/ru/styles/scss/components/_header.scss
@@ -1,6 +1,5 @@
 .header {
   margin-bottom: 2rem;
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);
   &__wrapper {
     @include flex(row, space-between, center);
     max-width: 1500px;
@@ -20,13 +19,15 @@
     background: #7a9bcd;
     padding: 20px 0;
     font-size: 18px;
-    a{
+    a {
       color: #fff;
     }
   }
   &__bottom {
+    background-color: #fff;
     .header__wrapper {
-    @include flex(row ,flex-start , center);}
+      @include flex(row, flex-start, center);
+    }
     @media (max-width: 1000px) {
       .header__wrapper {
         @include flex(row, center, center);
@@ -37,19 +38,19 @@
     }
     &--link {
       @include flex(row, center, center);
-       font-size: 14px;
+      font-size: 14px;
       color: #000;
       font-weight: 300;
       height: 60px;
-      padding: 0 10px;
+      padding: 0 18px;
       text-decoration: none;
       @include transition;
-      
+
       &:hover {
-        background-color: #435B80;
+        background-color: #435b80;
         color: #fff;
       }
-  
+
       img {
         margin-right: 10px;
       }
@@ -58,9 +59,8 @@
   &__logo {
     @include flex(row);
 
-    
     @media (max-width: 1000px) {
-   margin: 0px 20px;
+      margin: 0px 20px;
     }
     img {
       width: 100%;
