--- a/OFFERS-313/ru/styles/scss/_most.scss
+++ b/OFFERS-313/ru/styles/scss/_most.scss
@@ -34,6 +34,15 @@ h1 {
   & a {
     color: #000;
   }
+  @media (max-width: 600px) {
+ font-size: 30px;
+  }
+  @media (max-width: 450px) {
+    font-size: 25px;
+     }
+     @media (max-width: 400px) {
+      font-size: 20px;
+       }
 }
 
 .btn {
@@ -57,6 +66,7 @@ h1 {
 
 .img {
   position: relative;
+  width: 100%;
   @include flex(column, center, center);
   &.center {
     margin: 0 auto;
@@ -71,4 +81,9 @@ h1 {
     margin: 0 auto;
     margin-top: 1.6rem;
   }
+}
+.link{
+  margin-top: 10px;
+  width: 100%;
+  max-width: 373px;
 }
