--- a/OFFERS-313/ru/styles/scss/main.scss
+++ b/OFFERS-313/ru/styles/scss/main.scss
@@ -8,7 +8,6 @@
   padding-top: 34px;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-gap: 2rem;
   max-width: $content__width;
   margin: 0 auto;
   position: relative;
@@ -252,8 +251,67 @@
 }
 
 .sidebar {
+  @media (max-width: 1180px) {
+    display: none;
+  }
+  .news{
+    @include flex (row,center,center);
+    font-size: 20px;
+    margin: 23px 0;
+img{
+  width: 74px;
+  margin-right: 14px;
+}
+  }
+  &__title{
+    color: #000000;
+    font-weight: 900;
+    margin-top: 0;
+font-size: 20px;
+  }
+  &__box {
+    border: 2px solid #cccccc;
+    border-top: 5px solid #E60023;
+    box-sizing: border-box;
+    padding: 14px;
+    margin-right: 34px;
+  }
   h2 {
     font-size: 20px;
+  }
+  &__comment {
+    &--text {
+      font-size: 18px;
+      line-height: 25px;
+      letter-spacing: 0.03em;
+      padding: 0px 10px;
+      color: #000000;
+    }
+    &--bottom {
+      font-size: 9px;
+      line-height: 25px;
+      padding: 0px 10px;
+      margin-top: 0;
+      letter-spacing: 0.03em;
+      color: #000000;
+    }
+    .user {
+      @include flex(row, flex-start, center);
+      .name {
+        color: #000000;
+        font-size: 16px;
+        margin-left: 9px;
+        font-weight: bold;
+      }
+      img {
+        width: 44px;
+      }
+      .date {
+        color: #c4c4c4;
+        margin-left: 13px;
+        font-size: 11px;
+      }
+    }
   }
   &__main {
     background-image: url(../../img/side.png);
@@ -312,9 +370,9 @@
   }
 }
 .prod {
-  margin:80px 0 ;
+  margin: 80px 0;
   margin-top: 0;
-  .title{
+  .title {
     margin-top: 0;
   }
   &__link {
@@ -330,12 +388,12 @@
       max-width: 400px;
       background-color: #e60023;
     }
-    @media (max-width:700px){
+    @media (max-width: 700px) {
       font-size: 20px;
     }
   }
-  .text{
-      margin-top: 53px;
+  .text {
+    margin-top: 53px;
   }
 }
 .text {
