--- a/OFFERS-313/ru/styles/scss/main.scss
+++ b/OFFERS-313/ru/styles/scss/main.scss
@@ -45,6 +45,7 @@
       p {
         position: absolute;
         top: auto;
+        margin: 0;
         margin-left: 9px;
         left: auto;
       }
