--- a/OFFERS-302/mx-2/css/style_1.css
+++ b/OFFERS-302/mx-2/css/style_1.css
@@ -481,7 +481,7 @@ header .button { margin-top:5px; }
 .block-9 .desc { font-size:1.1em; line-height:1.4; padding-bottom:25px; }
 .block-9 img { width:100%; }
 .block-10 { background-image:url(../img/bg-10.jpg); }
-.block-10 .icon-box { text-align:left; padding-bottom:20px; padding-right:50px; }
+.block-10 .icon-box { text-align:left; padding-bottom:20px; }
 .block-10 .icon-box .title { font-family':PT Sans',sans-serif; font-size:1.1rem; text-transform:uppercase; color:#bff29e; padding-top:10px; padding-bottom:10px; text-align:left; letter-spacing:.7px; }
 .block-10 .icon-box .desc { letter-spacing:.4px; }
 .block-10 .icon-box.three { padding-bottom:0; }
@@ -525,7 +525,7 @@ header .button { margin-top:5px; }
 .block-19 { background-image:url(../img/bg-19.jpg); }
 .block-19 .icon-box { width:19.5%; padding-bottom:40px; }
 .block-19 .icon-box:nth-child(5n):after { background-image:none; }
-.block-19 .icon-box .desc { padding-bottom:0; padding-right:20%; padding-left:20%; text-transform:uppercase; }
+.block-19 .icon-box .desc { padding-bottom:0; padding-right:20%; padding-left:20%; text-transform:uppercase; text-align: center; }
 .block-19 .conclusion { color:#8aeff1; font-size:2rem; text-align:center; font-weight:600; }
 
 
@@ -622,7 +622,7 @@ header .button { margin-top:5px; }
 	.block-6 .name { padding-bottom:3px; }
 	.block-8 .desc { padding-right:8%; padding-left:8%; padding-bottom:30px; }
 	.block-9 .desc { font-size:.9rem; padding-bottom:20px; }
-	.block-10 .icon-box { min-height:125px; padding-right:20px; }
+	.block-10 .icon-box { min-height:125px; }
 	.block-10 .icon-box.horizon { padding-left:125px; }
 	.block-10 .icon-box.horizon:before { width:110px; background-size:100% 110px; }
 	.block-10 .icon-box .title { padding-top:5px; padding-bottom:5px; letter-spacing:.2px; }
@@ -695,7 +695,7 @@ header .button { margin-top:5px; }
 	.block-9 { text-align:center; }
 	.block-9 img { width:60%; padding-bottom:25px; }
 	.block-9 .desc { text-align:left; font-size:1rem; padding-right:20%; padding-left:20%; }
-	.block-10 .icon-box { margin-left:20%; width:60%; padding-right:20px; }
+	.block-10 .icon-box { width:60%;  }
 	.block-12 .desc { height:100px; }
 	.block-13 img { width:200px; margin:0; padding:0; padding-bottom:10px; }
 	.block-13 .swiper-slide { display:block; }
@@ -739,7 +739,7 @@ header .button { margin-top:5px; }
 	.block-8 .only420 { width:60%; }
 	.block-9 img { width:80%; }
 	.block-9 .desc { padding-right:10%; padding-left:10%; }
-	.block-10 .icon-box { margin-left:10%; width:80%; padding-right:10px; }
+	.block-10 .icon-box { width:80%;}
 	.block-12 .desc { height:150px; }
 	.block-15 .video { padding-right:10%; padding-left:10%; }
 	.block-16 { background-size:auto 910px; }
@@ -765,7 +765,7 @@ header .button { margin-top:5px; }
 	.block-8 .only420 { width:90%; }
 	.block-9 img { width:100%; }
 	.block-9 .desc { padding-right:0; padding-left:0; }
-	.block-10 .icon-box { margin-left:3%; width:94%; padding-right:0; }
+	.block-10 .icon-box { width:94%; padding-right:0; }
 	.block-12 .desc { height:280px; font-size:.9rem; }
 	.block-13 img { width:140px; }
 	.block-13 .swiper-button-next,.block-13 .swiper-button-prev { top:80px; }
