--- a/OFFERS-313/ru/styles/scss/main.scss
+++ b/OFFERS-313/ru/styles/scss/main.scss
@@ -22,6 +22,7 @@
 .content {
   grid-area: content;
   @include content;
+  position: relative;
 
   .top {
     width: 100%;
@@ -257,24 +258,24 @@
   @media (max-width: 1180px) {
     display: none;
   }
-  .news{
-    @include flex (row,center,center);
+  .news {
+    @include flex(row, center, center);
     font-size: 20px;
     margin: 23px 0;
-img{
-  width: 74px;
-  margin-right: 14px;
-}
+    img {
+      width: 74px;
+      margin-right: 14px;
+    }
   }
-  &__title{
+  &__title {
     color: #000000;
     font-weight: 900;
     margin-top: 0;
-font-size: 20px;
+    font-size: 20px;
   }
   &__box {
     border: 2px solid #cccccc;
-    border-top: 5px solid #E60023;
+    border-top: 5px solid #e60023;
     box-sizing: border-box;
     padding: 14px;
     margin-right: 34px;
@@ -406,4 +407,34 @@ font-size: 20px;
   .text {
     font-size: 15px;
   }
+}
+.bast {
+  position: absolute;
+  top: 110px;
+  
+  right: 9%;
+  @media (max-width: 900px) {
+    img {
+      max-width: 80px;
+      width: 100%;
+    }
+    right: 5%;
+    top: 110px;
+  }
+  @media (max-width: 500px) {
+    img {
+      max-width: 60px;
+    }
+    right: 5%;
+    top: 80px;
+  }
+  @media (max-width: 400px) {
+    right: -5%;
+    top: 60px;
+  }
+}
+.link_prod{
+  max-width: 177px;
+  width: 100%;
+  margin-top: 20px;
 }
