--- a/OFFERS-327/ru/styles/scss/main.scss
+++ b/OFFERS-327/ru/styles/scss/main.scss
@@ -7,6 +7,7 @@
 @import "components/sect1";
 @import "components/sect2";
 @import "components/sect3";
+@import "components/sect4";
 @import "components/sect6";
 @import "components/sect7";
 .main {
