--- a/OFFERS-327/ru/styles/scss/components/_sect1.scss
+++ b/OFFERS-327/ru/styles/scss/components/_sect1.scss
@@ -1,5 +1,5 @@
 .sect1{
-    background-image: url(../../../img/sect1_bg_dc.jpg);
+    background-image: url(./../../img/sect1_bg_dc.jpg);
     &__main{
         display: flex;
         flex-direction: row;
