--- a/OFFERS-327/ru/styles/scss/components/_sect2.scss
+++ b/OFFERS-327/ru/styles/scss/components/_sect2.scss
@@ -21,7 +21,7 @@
         }
     }
     .text {
-        background-image: url(../../../img/sect2-text-bg.svg);
+        background-image: url(./../../img/sect2-text-bg.svg);
         max-width: 427px;
         background-size: contain;
         background-repeat: no-repeat;
