--- a/OFFERS-327/ru/styles/scss/components/_sect3.scss
+++ b/OFFERS-327/ru/styles/scss/components/_sect3.scss
@@ -1,5 +1,5 @@
 .sect3 {
-    background-image: url(../../../img/sect3_bg_dc.jpg);
+    background-image: url(./../../img/sect3_bg_dc.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     @include media-lg-tablet {
