--- a/OFFERS-327/ru/styles/scss/components/_sect4.scss
+++ b/OFFERS-327/ru/styles/scss/components/_sect4.scss
@@ -1,5 +1,5 @@
 .sect4 {
-    background-image: url(../../../img/sect4-bg.jpg);
+    background-image: url(./../../img/sect4-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -17,7 +17,7 @@
         color: #ffffff;
     }
     .item {
-        background-image: url(../../../img/revi-bg.png);
+        background-image: url(./../../img/revi-bg.png);
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
