--- a/OFFERS-327/ru/styles/scss/components/_sect6.scss
+++ b/OFFERS-327/ru/styles/scss/components/_sect6.scss
@@ -1,5 +1,5 @@
 .sect6{
-    background-image: url(../../../img/sect6_bg.jpg);
+    background-image: url(./../../img/sect6_bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     @include media-lg-tablet {
