--- a/OFFERS-327/ru/styles/scss/main.scss
+++ b/OFFERS-327/ru/styles/scss/main.scss
@@ -8,6 +8,7 @@
 @import "components/sect2";
 @import "components/sect3";
 @import "components/sect4";
+@import "components/sect5";
 @import "components/sect6";
 @import "components/sect7";
 .main {
