--- a/OFFERS-303/ru/styles/scss/_most.sass
+++ b/OFFERS-303/ru/styles/scss/_most.sass
@@ -50,6 +50,8 @@ h2
       display: block
       
       font-size: 0.45rem
+  &.black
+    color: black
   &.left
     text-align: left
   &.center
@@ -60,9 +62,6 @@ h2
     padding-bottom: 0.38rem
   &.big
     font-size: 0.54rem
-  &.white
-    color: white
-    text-shadow: 0px 0px 15px rgba(100, 252, 255, 0.7)
 
   &.green
     color: $green
