--- a/OFFERS-303/ru/styles/scss/main.scss
+++ b/OFFERS-303/ru/styles/scss/main.scss
@@ -25,22 +25,22 @@
   .list {
     padding-top: 0.1rem;
     &__item {
-      min-height: .69rem;
+      min-height: 0.69rem;
       max-width: 3.77rem;
       width: 100%;
       margin: 0 auto;
       display: flex;
       align-items: center;
       justify-content: center;
-    background-image: url(../../img/list.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    box-sizing: border-box;
-    padding: 0.1rem;
-    padding-left: 0.9rem;
-    padding-right: 0.4rem;
-    color: #000;
-    background-position: center;
+      background-image: url(../../img/list.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      box-sizing: border-box;
+      padding: 0.1rem;
+      padding-left: 0.9rem;
+      padding-right: 0.4rem;
+      color: #000;
+      background-position: center;
     }
     img {
       width: 0.23rem;
@@ -68,7 +68,7 @@
     color: #ffffff;
     margin-top: 0.26rem;
   }
-  .triger{
+  .triger {
     position: absolute;
     top: 2.8rem;
     right: 0;
@@ -78,7 +78,7 @@
     font-weight: 600;
     color: #fff;
     transform: rotate(23.56deg);
-    img{
+    img {
       width: 0.6rem;
       margin-left: -0.3rem;
       margin-bottom: -0.3rem;
@@ -148,81 +148,46 @@
   }
 }
 .sect1 {
-  background: #3c2966;
-  background-size: cover;
-  background-image: url(../../img/sect1_bac.png);
-  padding: 0.1rem 0;
-  padding-bottom: 0.3rem;
-  .img {
-    padding: 0 0.15rem;
-    margin-bottom: 0.44rem;
-  }
-  .text {
-    color: #fff;
-    font-weight: 300;
-    padding-top: 0.24rem;
-    padding-bottom: 0.51rem;
-    letter-spacing: 0.03em;
-    line-height: 1.2;
-  }
-}
-.sect2 {
-  padding: 0.1rem 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  min-height: 10.4rem;
-  margin-top: -0.4rem;
-  background-position: top;
-  background-image: url(../../img/backround_2.png);
-  &__main {
-    padding-top: 0.2rem;
-  }
   &__item {
-    @include flex(row, space-between, center);
-    margin-top: -0.5rem;
-    img {
-      width: 1.9rem;
-    }
+    width: 4.52rem;
+    margin: 0.1rem auto;
+    min-height: 1.39rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 0 0.15rem;
     p {
-      widows: 2.64rem;
-      color: #ffff;
-      margin: 0;
-      padding-left: 0.2rem;
+      width: 2.5rem;
+      font-family: IBM Plex Serif;
+      font-weight: bold;
+      font-size: 0.18rem;
+      text-transform: uppercase;
+      color: #000000;
     }
-    &:nth-child(even) {
-      flex-direction: row-reverse;
+    &:nth-child(odd){
+      justify-content: flex-start;
+      text-align: left;
+    }
+    &:nth-child(1) {
+      background-image: url(../../img/sect1_item-1.png);
+    }
+    &:nth-child(2) {
+      background-image: url(../../img/sect1_item-2.png);
+    }
+    &:nth-child(3) {
+      background-image: url(../../img/sect1_item-3.png);
+    }
+    &:nth-child(4) {
+      background-image: url(../../img/sect1_item-4.png);
     }
   }
 }
-.sect3 {
-  padding: 0.1rem 0;
-  padding-bottom: 1rem;
 
-  h2 {
-    padding-top: 0.2rem;
-  }
-  &__main {
-    display: grid;
-    width: max-content;
-    margin: 0 auto;
-    grid-template-columns: repeat(2, 2.11rem);
-    grid-gap: 0.2rem;
-  }
-}
-.sect4 {
-  padding: 0.1rem 0;
-  background: #3c2966;
-  padding-bottom: 1rem;
-  .top {
-    margin-top: -0.7rem;
-  }
-  h2 {
-    margin-top: -2rem;
-  }
-}
+
 .sect5 {
   padding: 0.6rem 0;
-  margin-top: -0.8rem;
   padding-bottom: 0.8rem;
   background-position: top;
   background-size: cover;
