--- a/OFFERS-303/ru/styles/scss/main.scss
+++ b/OFFERS-303/ru/styles/scss/main.scss
@@ -12,6 +12,8 @@
     padding-top: 0.01rem;
     position: relative;
     background-image: url(../../img/intro__top.png);
+    background-color: #fff;
+    background-repeat: no-repeat;
     background-size: contain;
   }
   &__title {
@@ -89,6 +91,7 @@
     width: 100%;
     background-repeat: no-repeat;
     background-size: contain;
+ 
     background-image: url(../../img/price.png);
     margin: 0.68rem auto;
     position: relative;
@@ -150,11 +153,13 @@
 .sect1 {
   &__item {
     width: 4.52rem;
-    margin: 0.1rem auto;
+    margin: 0.4rem auto;
     min-height: 1.39rem;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    background-repeat: no-repeat;
+    background-size: contain;
     text-align: right;
     box-sizing: border-box;
     padding: 0 0.15rem;
@@ -162,6 +167,7 @@
       width: 2.5rem;
       font-family: IBM Plex Serif;
       font-weight: bold;
+      margin: 0;
       font-size: 0.18rem;
       text-transform: uppercase;
       color: #000000;
@@ -182,6 +188,11 @@
     &:nth-child(4) {
       background-image: url(../../img/sect1_item-4.png);
     }
+  }
+  iframe{
+    max-width: 4.8rem;
+    width: 100%;
+    height: 3.26rem;
   }
 }
 
