--- a/OFFERS-303/ru/styles/scss/_most.sass
+++ b/OFFERS-303/ru/styles/scss/_most.sass
@@ -174,3 +174,8 @@ img
   &__bottm
     text-align: center
     color: #7E7E7E
+
+.grid 
+  display: grid
+  grid-template-columns: repeat(2, 1fr)
+  text-align: center
