--- a/OFFERS-303/ru/styles/scss/_most.sass
+++ b/OFFERS-303/ru/styles/scss/_most.sass
@@ -156,17 +156,17 @@ img
     justify-content: center
     align-items: center
     button
-      width: 0.24rem
+      width: 0.5rem
       height: 0.07rem
       outline: none
-      background: #FFBE00
+      background: #EFEFEF
       box-sizing: border-box
       margin: 0 0.07rem
       border-radius: 10px
       box-sizing: border-box
       transition: .2s ease all
       &.active
-       background: #FF3535
+       background: #A67EFF
 .text
   width: 4.38rem
   margin: 0 auto
