--- a/OFFERS-303/ru/styles/scss/main.scss
+++ b/OFFERS-303/ru/styles/scss/main.scss
@@ -225,40 +225,40 @@ P{
     padding-top:0.05rem ;
   }
 }
-
-.sect5 {
-  padding: 0.6rem 0;
-  padding-bottom: 0.8rem;
-  background-position: top;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url(../../img/backround_2.png);
-  h2 {
-    padding-top: 0;
-    margin-bottom: 0.4rem;
+.sect4{
+  margin-bottom: 0.4rem;
+  img{
+    width: 2rem;
   }
-  &__main {
-    @include flex(row, space-between, center);
+}
+.sect6{
+  background: #202020;
+  padding-bottom: 1rem;
+  &__item{
+    margin: 0.2rem auto;
+    width: 3rem;
+    color: #fff;
+    b{
+      color: #A67EFF;
+      font-size: 0.4rem;
+      font-weight: bold;
+      
+      text-transform: uppercase;
+    }
   }
-  .prod {
-    width: 1.51rem;
+  .top{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    img{
+      width: 0.43rem;
+      margin-right: 0.2rem;
+    }
   }
-  &__item {
-    @include flex(row, space-between, center);
-    width: 2.64rem;
-    margin-bottom: 0.44rem;
-    margin-left: 0.37rem;
-    img {
-      width: 0.48rem;
-    }
-    &:last-child {
-      margin-bottom: 0;
-    }
-    p {
-      width: 2rem;
-      color: #ffffff;
-      margin: 0;
-      font-size: 0.2rem;
-    }
+}
+footer.intro{
+  .prod{
+    margin-bottom: 0.2rem;
   }
 }
