--- a/OFFERS-303/ru/styles/scss/_offer.sass
+++ b/OFFERS-303/ru/styles/scss/_offer.sass
@@ -18,6 +18,9 @@ input[type=number]::-webkit-outer-spin-button
 form
   box-sizing: border-box
   margin: auto
+  background-color: #fff
+  border-radius: 5px
+  width: 4.42rem
   display: flex
   align-items: center
   flex-direction: column
@@ -25,7 +28,6 @@ form
 input, textarea
   height: .62rem
   width: 3.47rem
-  padding-left: 0.3rem
   box-sizing: border-box
   border-radius: 10px
   font-size: 0.22rem
@@ -38,8 +40,14 @@ input, textarea
   background: #FFFFFF
   box-shadow: inset 0px 4px 4px rgba(162, 162, 162, 0.25)
   border-radius: 100px
+  background: #F9F9F9
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25)
+  border-radius: 50px
 input::placeholder
-  font-size: 0.17rem
+  font-size: 0.22rem
+  text-align: center
+  font-weight: bold
+  color: #CBCBCB
   font-family: inherit
   font-weight: normal
 
