--- a/OFFERS-329/gr/css/style1.css
+++ b/OFFERS-329/gr/css/style1.css
@@ -33,7 +33,7 @@ header{width:100%;background-image:url(../img/header-bg-desktop.jpg);background-
 .text-white{color:#fff;}
 .bg-pink{background-color:#f2a3b8;}
 .bg-black{background-color:#333;}
-.top-text-big{display:inline-block;text-align:center;font-size:102px;line-height:102px;text-shadow:1px 2px 0px rgba(0, 0, 0, 0.5);}
+.top-text-big{display:inline-block;text-align:center;font-size:60px;line-height:102px;text-shadow:1px 2px 0px rgba(0, 0, 0, 0.5);}
 .top-text-p{font-family:'Oswald', sans-serif;font-size:22px;line-height:26px;color:#333;display:block;width:100%;text-align:center;position:relative;top:37px;}
 .product-img img {width:100%; height:auto;}
 .form-container{display:inline-block;width:420px;height:285px;border-radius:25px;-moz-border-radius:25px 25px 25px 25px;-webkit-border-radius:25px 25px 25px 25px;padding:20px;border-style:solid;border-width:1px;border-color:rgb(242, 163, 184);background-color:#fff;}
@@ -61,7 +61,7 @@ h2{font-size:32px;line-height:48px;font-weight:normal;margin:0;}
 h3{font-size:42px;line-height:90px;font-weight:normal;margin:0;}
 .price{font-size:32px;color:#f2a3b8;line-height:42px;}
 .old-price{font-size:22px;color:#333;text-decoration:line-through;}
-.box{display:block;position:relative;top:107px;}
+.box{display:block;position:relative;top:107px; max-width: 400px; width: 100%;}
 .box2{position:relative;top:70px;}
 p{font-family:'Oswald', sans-serif;font-size:22px;line-height:32px;font-weight:normal;}
 .block_pink_gradient{background-image:-moz-linear-gradient(90deg, rgb(242,163,184) 0%, rgb(255,255,255) 100%);background-image:-webkit-linear-gradient(90deg, rgb(242,163,184) 0%, rgb(255,255,255) 100%);background-image:-ms-linear-gradient(90deg, rgb(242,163,184) 0%, rgb(255,255,255) 100%);padding:40px;}
@@ -106,7 +106,7 @@ p{font-family:'Oswald', sans-serif;font-size:22px;line-height:32px;font-weight:n
 header{background-position:-400px;height:750px;}
 .top-col{width:480px;margin:0;padding:0;}
 .top-text-black{font-size:38px;padding-top:32px;}
-.top-text-big{font-size:70px;line-height:70px;}
+.top-text-big{font-size:40px;line-height:70px;}
 .top-text-p{sd;font-size:18px;line-height:22px;}
 h1{font-size:38px;line-height:42px;}
 h3{font-size:27px;line-height:79px;}
@@ -130,8 +130,8 @@ p{line-height:28px;}
 header{display:block;background-image:url(../img/header-bg-mob.jpg);background-color:#fdf1f5;background-position:top left;height:auto;}
 .row .col.m6{display:block;width:100%;padding:0;}
 .top-col{width:100%;display:block;}
-.top-text-black{font-size:30px;padding-top:216px;}
-.top-text-big{font-size:50px;line-height:43px;}
+.top-text-black{font-size:27px;padding-top:216px;}
+.top-text-big{font-size:43px;line-height:43px;}
 .top-text-p{sd;font-size:16px;line-height:20px;padding-top:20px;padding-bottom:20px;top:15px;}
 .space1{padding-top:50px;}
 h1{font-size:28px;line-height:32px;}
@@ -173,4 +173,9 @@ p{font-size:18px;line-height:22px;}
 .owl-next, .owl-prev{position:absolute;display:inline-block;top:58%;width:16px;height:100px;font-size:3rem;font-family:'icomoon' !important;text-align:center;}
 .avatar{padding-left:28px;}
 .testimonials-form input[type=text], .testimonials-form textarea{width:84%;border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px;margin-top:20px;padding:15px;border:none;font-family:'Oswald', sans-serif;overflow:auto;}
+}
+@media only screen and (max-width:400px){
+    .top-text-big{
+        font-size: 27px;
+    }
 }
