--- a/OFFERS-329/pt/css/style1.css
+++ b/OFFERS-329/pt/css/style1.css
@@ -61,7 +61,7 @@ h2{font-size:32px;line-height:48px;font-weight:normal;margin:0;}
 h3{font-size:42px;line-height:90px;font-weight:normal;margin:0;}
 .price{font-size:32px;color:#f2a3b8;line-height:42px;}
 .old-price{font-size:22px;color:#333;text-decoration:line-through;}
-.box{display:block;position:relative;top:107px;}
+.box{display:block;position:relative;top:107px; max-width: 400px;width: 100%;}
 .box2{position:relative;top:70px;}
 p{font-family:'Oswald', sans-serif;font-size:22px;line-height:32px;font-weight:normal;}
 .block_pink_gradient{background-image:-moz-linear-gradient(90deg, rgb(242,163,184) 0%, rgb(255,255,255) 100%);background-image:-webkit-linear-gradient(90deg, rgb(242,163,184) 0%, rgb(255,255,255) 100%);background-image:-ms-linear-gradient(90deg, rgb(242,163,184) 0%, rgb(255,255,255) 100%);padding:40px;}
