--- a/OFFERS-338/ru/styles/scss/_most.scss
+++ b/OFFERS-338/ru/styles/scss/_most.scss
@@ -12,7 +12,7 @@ body {
   margin: auto;
   position: relative;
   line-height: 1.4;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Rubik', sans-serif;
   color: #333;
   overflow-x: hidden;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.25);
@@ -26,15 +26,6 @@ body {
       border-color: green;
     }
   }
-}
-.roboto {
-  font-family: "Roboto", sans-serif;
-}
-.Montser {
-  font-family: "Montserrat", sans-serif;
-}
-.oswald {
-  font-family: "Oswald", sans-serif;
 }
 section {
   padding: 0.3rem 0;
@@ -143,22 +134,18 @@ h2 + p {
   border: none;
   color: #fff;
   text-decoration: none;
-  font-size: 0.2rem;
-  height: 0.7rem;
-  width: 3.2rem;
+  font-size: 0.3rem;
+  font-weight: bold;
+  height: 0.8rem;
+  width: 3.18rem;
   box-sizing: border-box;
   padding: 0 0.1rem;
   text-align: center;
   margin: 0 auto;
   position: relative;
-  font-family: "Ubuntu", sans-serif;
-  font-weight: bold;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  background: #f42362;
-  box-shadow: 0px 0px 15px rgba(244, 35, 98, 0.8);
-  border-radius: 50px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)), drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background: linear-gradient(180deg, #FF5C00 0%, #CD5600 100%);
+border-radius: 5px;
+  
   span {
     position: relative;
   }
@@ -245,5 +232,25 @@ img {
     mix-blend-mode: color-burn;
     z-index: -1;
     transform: translateY(0.15rem);
+  }
+}
+.sect-title{
+  display: flex;
+flex-direction: column;
+align-items: center;
+margin-bottom: 0.4rem;
+font-size: 0.23rem;
+font-weight: bold;
+text-transform: uppercase;
+  &::after{
+    content: '';
+    width: 3.26rem;
+    margin-top: 0.1rem;
+    height: 0.1rem;
+    background-repeat: no-repeat;
+    background-image: url(../../img/title.svg);
+  }
+  b{
+    font-size: 0.3rem;
   }
 }
