--- a/OFFERS-350/p3/css/index.css
+++ b/OFFERS-350/p3/css/index.css
@@ -1,1 +1,63 @@
-.disclosure,.footer__links{font-family:'Roboto',sans-serif}.disclosure{color:#aaa;font-size:12px;padding:0 20px;margin:20px 0 15px;line-height:18px;text-align:center}.footer__links{display:flex;justify-content:center;align-items:center;flex-wrap:wrap;padding:20px}.footer__links .footer__links--link{color:#aaa;font-size:12px;padding:0 5px;margin:0 0 10px;line-height:25px;text-align:center}@media only screen and (max-width:768px){.footer__links{padding:20px;display:flex;flex-direction:column;justify-content:flex-start;align-items:flex-start}.footer__links .footer__links--link{color:#aaa;font-size:12px;padding:0 5px;margin:0 0 10px;line-height:25px;text-align:center}}
+.disclosure,
+.footer__links {
+    font-family: "Roboto", sans-serif;
+}
+.disclosure {
+    color: #aaa;
+    font-size: 12px;
+    padding: 0 20px;
+    margin: 20px 0 15px;
+    line-height: 18px;
+    text-align: center;
+}
+.footer__links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+.footer__links .footer__links--link {
+    color: #aaa;
+    font-size: 12px;
+    padding: 0 5px;
+    margin: 0 0 10px;
+    line-height: 25px;
+    text-align: center;
+}
+@media only screen and (max-width: 768px) {
+    .footer__links {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .footer__links .footer__links--link {
+        color: #aaa;
+        font-size: 12px;
+        padding: 0 5px;
+        margin: 0 0 10px;
+        line-height: 25px;
+        text-align: center;
+    }
+}
+form{
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+}
+form input {
+   width: 100%;
+   height: 30px;
+   margin: 10px;
+   padding-left: 10px;
+   border: none;
+}
+form button {
+    width: 60%;
+    height: 20px;
+    border: none;
+    color: #fff;
+    background-color: rgb(108, 108, 255);
+}
