--- a/OFFERS-356/bg/css/style1.css
+++ b/OFFERS-356/bg/css/style1.css
@@ -87,7 +87,7 @@ p{font-family:'Oswald', sans-serif;font-size:22px;line-height:32px;font-weight:n
 .scroll::-webkit-scrollbar-track{border-radius:10px;-webkit-box-shadow:inset 0 0 50px rgba(0,0,0,0.1);}
 .scroll::-webkit-scrollbar-thumb{border-radius:10px;webkit-box-shadow:inset 0 0 6px rgba(242,163,184,.3);background-color:#f2a3b8;}
 .views{float:right;font-size:16px;line-height:52px;}
-.testimonials p{font-size:16px;line-height:18px;word-break:break-all;}
+.testimonials p{font-size:16px;line-height:18px;}
 .testimonials-form{width:670px;margin:0 auto;}
 .testimonials-form input[type=text], .testimonials-form textarea{width:96%;border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px;margin-top:20px;padding:15px;border:none;font-family:'Oswald', sans-serif;overflow:auto;}
 .testimonials-form input[type=text]{height:20px;font-size:22px;}
