--- a/OFFERS-341/ru/styles/scss/_most.scss
+++ b/OFFERS-341/ru/styles/scss/_most.scss
@@ -70,14 +70,14 @@ border: none;
     margin: 0.8rem auto;
   }
 
-  p {
-    color: #707070;
+  span{
+    color: #686868;
     font-size: 1.1rem;
     margin: 0 auto;
     margin-bottom: 0;
     margin-top: 1rem;
     max-width: 390px;
-    text-align: center;
+    text-align: left;
   }
 }
 
