--- a/OFFERS-341/ru/styles/scss/main.scss
+++ b/OFFERS-341/ru/styles/scss/main.scss
@@ -20,7 +20,7 @@
 
 .content {
   background-color: #fff;
-  padding: 75px 32px;
+  padding: 30px 32px;
   max-width: 976px;
   width: 100%;
   @media (max-width: 460px) {
@@ -73,8 +73,8 @@
     }
   }
   & > .sub {
-    font-size: 20px;
-    color: #808080;
+    font-size: 18px;
+    color: #000;
     margin-bottom: 2rem;
     @media (max-width: 600px) {
       font-size: 15px;
@@ -108,6 +108,9 @@
       }
       .img {
         margin-left: 30px;
+        span{
+          
+        }
         @media (max-width: 650px) {
           margin-left: 10px;
         }
