--- a/OFFERS-342/ru/styles/scss/main.scss
+++ b/OFFERS-342/ru/styles/scss/main.scss
@@ -26,7 +26,7 @@
   width: 100%;
   margin-top: 20px;
   @media (max-width: 460px) {
-    padding: 3rem 1rem;
+    padding: 3rem 0;
   }
 
   &__author {
@@ -58,8 +58,11 @@
 
 .blog {
   font-size: 1.2rem;
-  padding: 0 25px;
+  padding: 0 23px;
   color: #000;
+  @media (max-width: 460px) {
+    padding: 0 15px;
+  }
   span {
     color: #686868;
     font-size: 1.1rem;
@@ -80,8 +83,8 @@
     @media (max-width: 600px) {
       font-size: 22px;
     }
-    span{
-      font-size:19px ;
+    span {
+      font-size: 19px;
       color: #216087;
     }
   }
@@ -273,7 +276,7 @@
     padding: 0;
     margin: 0;
     padding: 0.2rem 0;
- 
+
     box-sizing: border-box;
     &__item {
       position: relative;
@@ -412,12 +415,12 @@
     margin: 20px 0;
     counter-reset: section;
     font-size: 16px;
-    p{
+    p {
       margin-top: 0;
     }
-    a{
-      b{
-        color: #02214A;
+    a {
+      b {
+        color: #02214a;
       }
     }
     b {
@@ -429,10 +432,10 @@
         color: #000;
       }
     }
-    &--border{
-      border: 2px solid #57B05F;
-box-sizing: border-box;
-background-color: #fff;
+    &--border {
+      border: 2px solid #57b05f;
+      box-sizing: border-box;
+      background-color: #fff;
     }
 
     span {
@@ -583,29 +586,40 @@ background-color: #fff;
   }
 }
 .comments {
-  margin-top: 3rem;
+  margin-top: 1rem;
+  padding: 0 23px;
+  hr{
+    color:#C5C5C5;
+    background-color: #C5C5C5;
+    border: none;
+    height: 1px;
+  }
   &__form {
-    border: 1px solid #cdcdcd;
     box-sizing: border-box;
     @include flex(row, space-between, center);
-
     .box {
       padding-left: 20px;
     }
+a{
+  img{
+    display: block;
+  }
+}
     textarea {
       width: 100%;
+      background: #f1f1f1;
+      border-radius: 5px;
       font-family: inherit;
       font-size: inherit;
       border: none;
-      background: #ffffff;
-      border-radius: 4px;
       outline: none;
       min-height: 2.2rem;
-      margin-bottom: 1rem;
+      margin-right: 10px;
+      margin-left: 10px;
       padding-left: 1rem;
       &::placeholder {
-        color: #d7d7d7;
-        font-size: 14px;
+        color: #b0b0b0;
+        font-size: 12px;
       }
     }
     textarea {
@@ -615,6 +629,12 @@ background-color: #fff;
 
     .btn {
       margin: 0;
+      max-width: 130px;
+      @media (max-width: 460px) {
+        max-width: 90px;
+        height: 40px;
+        font-size: 12px;
+      }
     }
   }
 }
