--- a/OFFERS-342/ru/styles/scss/components/_sidebar.scss
+++ b/OFFERS-342/ru/styles/scss/components/_sidebar.scss
@@ -5,12 +5,17 @@
   padding: 3rem 0.4rem;
 
   &__top {
-    background: #1970B3;;
+    background: #1970b3;
     padding: 4px 18px;
     max-width: 175px;
-    color: #FFFFFF;
-  
-
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+  }
+  &__content {
+    background: #ffffff;
+    padding: 10px;
   }
   @include media-large {
     display: none;
@@ -22,50 +27,77 @@
     font-size: 18px;
   }
   &__main {
-    border: 1px solid #bebebe;
     box-sizing: border-box;
-    border-radius: 10px;
     padding: 10px;
-    margin-top: 40px;
+    background: #f5f5f5;
   }
   &__item {
     text-decoration: none;
-   
-    display: block;
+    @include flex(row, space-between, center);
     position: relative;
-    padding: 16px 0;
-    padding-bottom: 25px;
-
+    padding: 20px 0;
+    border-bottom: 1px solid #cfcfcf;
+    &:last-child {
+      border-bottom: 0;
+    }
     img {
       width: 100%;
+      max-width: 90px;
     }
-
 
     p {
       font-weight: bold;
       margin: 0;
+      text-transform: uppercase;
+      max-width: 180px;
+      width: 100%;
     }
-    b{
+    b {
       font-size: 16px;
     }
-    span{
+    span {
       color: #747474;
       display: block;
       font-size: 12px;
       margin-top: 10px;
     }
-   
-    .dat{
+
+    .dat {
       margin-top: 10px;
       display: block;
       color: #747474;
       font-size: 12px;
     }
   }
-  a{
+  a {
     text-decoration: none;
   }
-  h3{
+  h3 {
     margin-top: 0;
+  }
+  .banner{
+   
+    background-size: cover;
+    height: 340px;
+padding: 0 20px;
+    position: relative;
+    display: block;
+    width: 100%;
+    margin-top: 30px;
+    p{
+      text-transform: uppercase;
+      font-weight: bold;
+
+      bottom: 0;
+      position: absolute;
+      font-size: 20px;
+      
+color: #FFFFFF;
+span{
+  font-size: 15px;
+  font-weight: normal;
+
+}
+    }
   }
 }
