--- a/OFFERS-354/ru/styles/scss/_most.scss
+++ b/OFFERS-354/ru/styles/scss/_most.scss
@@ -3,7 +3,7 @@ html {
   scroll-behavior: smooth;
   font-size: 16px;
   height: 100%;
-
+  background: #E5E5E5;
   @media (max-width: 460px) {
     font-size: 14px;
   }
