--- a/OFFERS-354/ru/styles/scss/components/_header.scss
+++ b/OFFERS-354/ru/styles/scss/components/_header.scss
@@ -3,6 +3,10 @@
   position: relative;
   top: 0;
   z-index: 1;
+  .container{
+    max-width: $content__width;
+    margin: 0 auto;
+  }
   .min{
     display: none;
     @include media-tablet{
@@ -70,24 +74,6 @@
   &__top {
     background: #f3f3f3;
     padding: 6px 0;
-    a {
-      color: #898989;
-      text-decoration: none;
-      font-size: 12px;
-      position: relative;
-      display: flex;
-      align-items: center;
-    }
-    span {
-      display: block;
-      width: 4px;
-      height: 4px;
-      border-radius: 100%;
-      background-color: #898989;
-    }
-    @include media-lg-tablet {
-      display: none;
-    }
   }
   &__main{
     background: #216087;
