--- a/OFFERS-354/ru/styles/scss/components/_sidebar.scss
+++ b/OFFERS-354/ru/styles/scss/components/_sidebar.scss
@@ -1,9 +1,9 @@
 .sidebar {
-  max-width: 344px;
+  max-width: 300px;
   width: 100%;
   margin: 0 auto;
-  padding: 3rem 0.4rem;
-
+  padding: 0 36px;
+  padding-left: 20px;
   &__top {
     background: #f3f3f3;
     padding: 18px 40px;
@@ -38,7 +38,7 @@
   }
   &__item {
     text-decoration: none;
-   
+
     display: block;
     position: relative;
     padding: 16px 0;
@@ -48,32 +48,31 @@
       width: 100%;
     }
 
-
     p {
       font-weight: bold;
       margin: 0;
     }
-    b{
+    b {
       font-size: 16px;
     }
-    span{
+    span {
       color: #747474;
       display: block;
       font-size: 12px;
       margin-top: 10px;
     }
-   
-    .dat{
+
+    .dat {
       margin-top: 10px;
       display: block;
       color: #747474;
       font-size: 12px;
     }
   }
-  a{
+  a {
     text-decoration: none;
   }
-  h3{
+  h3 {
     margin-top: 0;
   }
 }
