--- a/OFFERS-354/ru/styles/scss/main.scss
+++ b/OFFERS-354/ru/styles/scss/main.scss
@@ -9,9 +9,11 @@
 .main {
   display: grid;
   width: 100%;
-  grid-template-columns: minmax(50px, 175px) minmax(100px, 1fr) minmax(100px, 355px);
-  max-width: 1231px;
+  grid-template-columns: minmax(100px, 1fr) minmax(100px, 300px);
+  max-width:  $content__width;
   margin: 0 auto;
+  background-color: #fff;
+  padding-top: 32px;
   position: relative;
   @include media-large {
     display: block;
@@ -19,10 +21,10 @@
 }
 
 .content {
-  background-color: #fff;
-  padding: 30px 32px;
+padding: 0 52px;
   max-width: 976px;
   width: 100%;
+
   margin: 0 auto;
   @media (max-width: 460px) {
     padding: 3rem 1rem;
